syntax = "proto3";

import "base.proto";

service BarrakService {
    rpc ListenCreation (Empty) returns (stream BarrakState);
    rpc ListenState(ID) returns (stream BarrakState);

    rpc SetWaypoint(SetWaypointRequest) returns (Empty);

    rpc QueueRanged(QueueRangedRequest) returns (QueueRangedResult);
}

message QueueRangedRequest {
    QueueUnitRequest Base = 1;
}

message QueueRangedResult {
    QueueUnitResult Base = 1;
}

message BarrakState {
    FactoryBuildingState Base = 1;
}